<resources>
    <string name="app_name">PsychoPass</string>
    <string name="Setting">Settings</string>
    <string name="Search">Search</string>
    <string name="Location">Target current location</string>
    <string name="CrimeList">Crime List</string>
    <string name="notificationLabel">Push Notification</string>
    <string name="SMS">Text Message</string>
    <string name="call">Phone Call</string>
    <string name="sampleText">We care about your safety!</string>
    <string name="CrimeNearbyBtnText">Crime Nearby</string>
    <string name="viewDetail"><u><i>Detail</i></u></string>
    <string name="noCrimeData">No crime data for this location!</string>
    <string name="errorLocation">Error: unable to retrieve location info!</string>
    <string name="requirePermission">Location permission required. </string>
    <string name="notification_push">Push Notification</string>
    <string name="notification_push_desc">Send notification on screen</string>
    <string name="notification_sms">Text Me</string>
    <string name="notification_sms_desc">Send notification through SMS</string>
    <string name="notification_phone">Sound</string>
    <string name="notification_phone_desc">Notify using sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_vibrate_desc">Notify using vibration</string>
    <string name="warning">Warning!</string>
    <string name="warning_content">You have entered a dangrous zone. Be careful!</string>
    <string name="nomarker">No marker on map</string>

</resources>
