<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/settingImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/settings_svg"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/Setting"
            android:scaleType="fitXY"/>
    </LinearLayout>

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapWebView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
    />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleText"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:id="@+id/infoContainer"
            android:paddingBottom="10dp"
            android:gravity="center"
            />

    </LinearLayout>

    <Button
        android:id="@+id/crimeBtn"
        style="@style/buttonColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/CrimeNearbyBtnText"
        android:onClick="onClickBtn"
        />

</LinearLayout>